# pacman-ai

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: default.yaml
pacman/agents/: networks.py  ppo.py  rnd.py  rollout.py
pacman/config/: default.yaml
pacman/engine/: constants.py  entities.py  game.py  ghost_ai.py  maze.py
pacman/env/: pacman_env.py  vec_env.py
pacman/training/: checkpoint.py  distill_ppo.py  dream_collector.py  dream_trainer.py  evaluator.py  trainer.py  wm_trainer.py
pacman/utils/: config.py
pacman/viz/: dashboard.py  dream_viewer.py  renderer.py  sprites.py
pacman/world_model/: decoder.py  encoder.py  heads.py  replay_buffer.py  rssm.py  world_model.py
scripts/: collect_data.py  collect_dream_data.py  dashboard.py  distill_dream_agent.py  evaluate.py  train.py  train_dreamer.py  train_online.py  train_world_model.py  watch.py  watch_dreams.py
src/agents/: base_agent.py  dqn_agent.py  networks.py  observations.py  ppo_agent.py  prioritized_replay_buffer.py  replay_buffer.py  rollout_buffer.py
src/data/: analyzer.py  logger.py  schemas.py
src/engine/: constants.py  entities.py  game.py  maze.py  maze_data.py
src/gui/: dashboard.py  renderer.py  sprites.py
src/training/: checkpoint.py  (+3 more)
tests/: test_agents.py  test_distillation.py  test_dreaming_e2e.py  test_engine.py  test_game.py  test_maze.py  test_networks.py  test_observations.py  test_online_loop.py  test_ppo.py  test_replay_buffer.py  test_rssm.py  test_training.py  test_vec_env.py  test_world_model.py  test_world_model_components.py
(+9 files in other folders)
